--- a/aktiviteter.html
+++ b/aktiviteter.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Rold Skov Orienteringsklub er aktiv i lokalsamfundet. Mød os til byfest og midsommerlounge eller læs om vores faste fællesmiddag.">
+    <title>RSOK | Aktiviteter</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
             integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+            crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
                 </a>
             </div>
             <div class="menu_toggle">
-                <input type="checkbox"/>
+                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -48,6 +50,7 @@
                 <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
                 <li><a href="./medlemsside.html">Medlemsside</a></li>
             </ul>
+            <i class="fa-solid fa-magnifying-glass right"></i>
         </div>
     </header>
 <main>
@@ -59,6 +62,7 @@
     <div id="middag"></div>
     <div class="desktop-max-width">
     <section class="Fourgrid">
+        <img src="./assets/img/Hjem/Desktop/RoldSkovOKFacebook19Juni2023.png" alt="Fællesmiddag om grillen i RSOK" class="desktop-img" loading="lazy">
         <article>
     <h2>Fællesmiddag i RSOK</h2>
     <p>Hver tirsdag afsluttes klubbens træning med en fællesmiddag, der samler medlemmerne om et godt måltid og hyggeligt
@@ -66,6 +70,7 @@
     ansigter at kende og styrke båndene i klubben. Fællesmiddagen er en værdsat tradition, der skaber en varm og
     inkluderende atmosfære, hvor alle føler sig som en del af fællesskabet.</p>
     </article>
+    <img src="./assets/img/Aktiviteter/Desktop/RoldSkovOKFacebook19Juni2023.png" alt="RSOK til Midsommer Lounge 2023" class="desktop-img" loading="lazy">
     <article>
     <h2>RSOK til Midsommer Lounge</h2>
     <p>Skørping Midsommer Lounge er et socialt event, der fylder parken ved Privathospitalet med glade mennesker, afslappet
@@ -74,6 +79,7 @@
     muligheden for at møde klubben i en uformel atmosfære. Overskuddet fra arrangementets barsalg går til projektet Aktiv
     Center Rold Skov, der styrker fællesskabet i lokalområdet.</p>
     </article>
+    <img src="./assets/img/Aktiviteter/Desktop/RoldSkovOkFacebook4Nov2023.png" alt="Orienteringsløbs aktivitet for nye til Byfest" class="desktop-img" loading="lazy">
     <article>
     <h2>RSOK til byfest i Skørping</h2>
     <p>Rold Skov Orienteringsklub er en fast del af den årlige byfest i Skørping, hvor vi inviterer både børn og voksne til at
@@ -88,6 +94,7 @@
     fællesmiddag, er du altid velkommen til at blive en del af vores engagerede fællesskab. Vi glæder os til at introducere
     dig til orienteringsløbets mange glæder og dele uforglemmelige oplevelser i noget af Danmarks smukkeste natur. Kom og
     vær med – vi har plads til alle!</p>
+    <div class="button">Tilmeld dig fællesskabet</div>
     </article>
     </section>
     </div>
@@ -95,20 +102,22 @@
 
         <footer>
             <section class="NyttigLinks">
-                <h6>Nyttige Links</h6>
+                <p>Nyttige Links</p>
                 <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
                 <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
                 <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
             </section>
             <section class="NyttigKontakt">
-                <h6>Kontakt</h6>
+                <p>Kontakt</p>
                 <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
                 <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
                 <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
             </section>
             <div class="SomeLinks">
-                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page">Facebook<i
+                        class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/">Instagram<i
+                        class="fa-brands fa-instagram"></i></a>
             </div>
             <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
         </footer>
