--- a/klubhaandbog.html
+++ b/klubhaandbog.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description"
+        content="Alt hvad du har brug for at vide om Rold Skov Orienteringsklub og foreningens spændende historie!">
+    <title>RSOK | Klubhåndbog</title>
     <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
             integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+            crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
                 </a>
             </div>
             <div class="menu_toggle">
-                <input type="checkbox" />
+                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -32,6 +34,7 @@
                     <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
                     <li><a href="./medlemsside.html">Medlemsside</a></li>
                 </ul>
+                
             </div>
         </div>
         <div class="navbar-desktop">
@@ -48,6 +51,7 @@
                 <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
                 <li><a href="./medlemsside.html">Medlemsside</a></li>
             </ul>
+            <i class="fa-solid fa-magnifying-glass right"></i>
         </div>
     </header>
     <main>
@@ -57,15 +61,16 @@
 <div class="hero-klubhaandbog"></div>
 <div class="desktop-max-width">
 <article>
-<div class="fill-image"></div>
+
 <h2>O-løb - en sport for alle!</h2>
 <p>Orienteringsløb er meget mere end en sport – det er en unik oplevelse i naturen, der kombinerer fysisk aktivitet med et mentalt aspekt. Derfor kalder vi det også “for hjerte og hjerne”! Det handler om at finde vej til poster i terrænet ved hjælp af et orienteringskort og et kompas, alt imens du nyder naturen og dens skiftende landskaber.
 
 O-løb er en sport for alle. Alle kan deltage på deres eget niveau – som barn eller voksen, individuelt eller sammen med andre. Her ligger den store fordel i, at hele familien kan "gå til det samme" og samtidig få oplevelser tilpasset alder, lyst og behov. Når børnene er små, skaber det fælles minder, mens teenagere og voksne kan dyrke sporten mere
 selvstændigt. I RSOK møder du alle aldre, samlet om glæden ved at finde poster med kort og kompas, både på hygge- og konkurrence niveau.</p>
+<img src="./assets/img/Klubhaandbog/Mobile/KLM2017.png" alt="RSOK medlemmer samlet efter træning" class="mobile-img" loading="lazy">
+<img src="./assets/img/Klubhaandbog/Desktop/KLM2017.png" alt="RSOK medlemmer samlet efter træning" class="desktop-img" loading="lazy">
 </article>
 <article>
-<div class="fill-image"></div>
 <h2>O-kort - dit værktøj til skoven</h2>
 <p>Orienteringskort – o-kort – er noget helt særligt. De er blandt verdens bedste, med en detaljerigdom og logik, der gør
 dem nemme at bruge, når du skal finde poster på banen. Kortene er tegnet af erfarne orienteringsløbere og anvender let forståelige symboler:</p>
@@ -77,9 +82,10 @@ dem nemme at bruge, når du skal finde poster på banen. Kortene er tegnet af er
 </ul>
 <p>Kortene er designet til at give dig de nødvendige oplysninger for at navigere hurtigt og sikkert i terrænet, uden overflødig information. Vi opdaterer løbende vores o-kort, så de altid er præcise og tilpasset områdets udvikling. RSOK har kort over store dele af Rold Skov, mindre private skove og offentlige parker, samt byområder som Skørping, Støvring
 og Terndrup, hvilket giver mulighed for både klassisk skovløb og by-orientering.</p>
+<img src="./assets/img/Klubhaandbog/Mobile/RoldSkovOKFacebook2Apr2023.png" alt="RSOK medlem giver instruks i O-kort" class="mobile-img" loading="lazy">
+<img src="./assets/img/Klubhaandbog/Desktop/RoldSkovOKFacebook2Apr2023.png" alt="RSOK medlem giver instruks i O-kort" class="desktop-img" loading="lazy">
 </article>
 <article id="historie">
-<div class="fill-image"></div>
 <h2>Klubbens historie - fra modstandskamp til moderne forening</h2>
 <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og har siden haft en lang og spændende historie, præget af både udfordringer og succeser. I klubbens tidlige år var aktiviteterne præget af vinterdiscipliner som skiløb og skøjteløb. Samtidig spillede klubben en uventet rolle under Anden Verdenskrig, hvor flere af stifterne var aktive i
 modstandsbevægelsen. Idrætsaktiviteterne blev brugt som dække for deres modstand mod besættelsesmagten, hvilket knytter klubbens historie tæt sammen med områdets kulturelle og nationale arv. <br>
@@ -90,46 +96,54 @@ Med Rold Skov som omdrejningspunkt har klubben altid haft unikke muligheder for 
 kort og nye ruter. <br>
 
 RSOK er ikke kun en klub med en stolt historie, men også et fællesskab, der favner traditioner og nye idéer. Uanset om du er nybegynder eller erfaren orienteringsløber, er du velkommen til at blive en del af vores klub.</p>
+<img src="./assets/img/Klubhaandbog/Mobile/RoldskovOkNyhedsbrev49Sep2020.png" alt="Sort/Hvid billede af RSOK'kerne i ældre tider" class="mobile-img" loading="lazy">
+<img src="./assets/img/Klubhaandbog/Desktop/RoldskovOkNyhedsbrev49Sep2020.png" alt="Sort/Hvid billede af RSOK'kerne i ældre tider" class="desktop-img" loading="lazy">
 </article>
+
 <article>
-<div class="fill-image"></div>
-<h2>Tirsdagstræning - sjov, udfordring og sammenhold</h2>
+<h2>Ungdomstræning – Sjov, Udfordring og Sammenhold!</h2>
 <p>Hver tirsdag kl. 16:45 forvandles skoven til et livligt træningsunivers, hvor børn, unge og voksne samles for at tage
 del i motiverende og spændende orienteringstræning. Vores dygtige juniorløbere og engagerede voksne trænere står klar
-til at dele ud af deres erfaringer og entusiasme. <br>
+til at dele ud af deres erfaringer og entusiasme. <br> <br>
 Tirsdagstræning er fyldt med sjov og fællesskab. Vi starter ofte med et kort, spændende oplæg om dagens
 orienteringstekniske tema, før vi kaster os ud i praktiske øvelser i skoven. Her lærer vi at mestre kortlæsning, vejvalg
 og orientering på en måde, der gør løb endnu sjovere og mere udfordrende.
 Alle er velkomne! <br> Uanset om du er en nysgerrig skovtrold, der vil snuse til orienteringssporten gennem leg og opdagelse, eller en ambitiøs
 junior, der søger tekniske og fysiske udfordringer – vi har plads til dig! Vores træning er designet til at inkludere
-alle aldre og niveauer, så du kan udvikle dig i dit eget tempo.<br> Vores tirsdagstræninger er en fantastisk mulighed for at løbe en bane,
+alle aldre og niveauer, så du kan udvikle dig i dit eget tempo.<br> <br>Vores tirsdagstræninger er en fantastisk mulighed for at løbe en bane,
 finpudse teknikken og opleve glæden ved orientering sammen med andre.
 Kom og vær en del af vores dynamiske fællesskab – vi glæder os til at se dig i skoven!</p>
+<img src="./assets/img/Klubhaandbog/Mobile/RoldSkovOKFacebook30Aug2022.png" alt="RSOK Ungdom samlet til træning" class="mobile-img" loading="lazy">
+<img src="./assets/img/Klubhaandbog/Desktop/RoldSkovOKFacebook30Aug2022.png" alt="RSOK Ungdom samlet til træning" class="desktop-img" loading="lazy">
 </article>
 <article>
-<div class="fill-image"></div>
+
 <h2>RSOK'kerne - Vores hyggelige seniorafdeling</h2>
 <p>RSOK’kerne er hjertet i vores seniorafdeling, hvor vi mødes den første mandag i hver måned (undtagen juli og august) fra
 kl. 10:00 til 13:00 for at nyde en fælles gåtur. Oftest udforsker vi de smukke omgivelser i Rold Skov, hvor vores erfarne medlemmer ofte deler fascinerende historier undervejs.<br> Men vores eventyr stopper ikke der – vi har også besøgt Aalborg for at opleve de imponerende gavlmalerier, udforsket Klosteret og nydt en afslappende kanotur på Lindenborg Å.På turene nyder vi vores medbragte madpakker i godt selskab.<br> Er du medlem af klubben? Så er du mere end velkommen til at deltage – helt gratis! Vi lover dig nogle uforglemmelige timer fyldt med naturoplevelser, fællesskab og en god portion røverhistorier.</p>
+<img src="./assets/img/Klubhaandbog/Mobile/RebildBakker3.png" alt="RSOK'kerne på vandretur i Rebild Bakker" class="mobile-img" loading="lazy">
+<img src="./assets/img/Klubhaandbog/Desktop/RebildBakker3.png" alt="RSOK'kerne på vandretur i Rebild Bakker" class="desktop-img" loading="lazy">
 </article>
 </div>
 </main>
         <footer>
             <section class="NyttigLinks">
-                <h6>Nyttige Links</h6>
+                <p>Nyttige Links</p>
                 <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
                 <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
                 <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
             </section>
             <section class="NyttigKontakt">
-                <h6>Kontakt</h6>
+                <p>Kontakt</p>
                 <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
                 <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
                 <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
             </section>
             <div class="SomeLinks">
-                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page">Facebook<i
+                        class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/">Instagram<i
+                        class="fa-brands fa-instagram"></i></a>
             </div>
             <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
         </footer>
