--- a/nytmedlem.html
+++ b/nytmedlem.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+      content="Overvejer du at starte til o-løb? Meld dig ind i vores skønne fællesskab her. Vi glæder os til at tage imod dig.">
+    <title>RSOK | Nyt medlem?</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
           integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+          crossorigin="anonymous" referrerpolicy="no-referrer">
   </head>
   <body>
     <header>
@@ -18,7 +20,7 @@
           </a>
           </div>
         <div class="menu_toggle">
-          <input type="checkbox" />
+          <input type="checkbox">
           <span></span>
           <span></span>
           <span></span>
@@ -46,6 +48,7 @@
           <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
           <li><a href="./medlemsside.html">Medlemsside</a></li>
         </ul>
+        <i class="fa-solid fa-magnifying-glass right"></i>
       </div>
     </header>
 <main>
@@ -55,7 +58,7 @@
     <div class="hero-nytmedlem"></div>
 
     <div class="desktop-max-width">
-    <section class="Fourgrid">
+    <section class="Twogrid">
       <article>
     <h2>Prøveperiode</h2>
     <p>
@@ -91,10 +94,10 @@
 <article>
     <h2>Priser</h2>
     <p>
-      Årligt kontingent 500kr <br />
+      Årligt kontingent 500kr <br>
       Kontingentet dækker et helt år og hjælper foreningens drift, arrangementer
       og vedligeholdelse af baner og udstyr. Betalingen giver dig adgang til
-      alle vores træninger og konkurrencer. <br />
+      alle vores træninger og konkurrencer. <br>
       Vi ser frem til at byde dig velkommen i vores fælleskab!
     </p>
     <div class="button">Meld dig ind her</div>
@@ -105,20 +108,21 @@
 
         <footer>
           <section class="NyttigLinks">
-            <h6>Nyttige Links</h6>
+            <p>Nyttige Links</p>
             <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
             <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
             <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
           </section>
           <section class="NyttigKontakt">
-            <h6>Kontakt</h6>
+            <p>Kontakt</p>
             <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
             <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
             <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
           </section>
           <div class="SomeLinks">
-            <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
-            <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page">Facebook<i
+                class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://www.instagram.com/roldskovorienteringsklub/">Instagram<i class="fa-brands fa-instagram"></i></a>
           </div>
           <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
         </footer>
