--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description"
+        content="Bliv en del af fællesskabet i Rold Skov Orienteringsklub og oplev glæden ved orienteringsløb i smukke omgivelser.">
+    <title>Rold Skov Orienteringsklub</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header>
@@ -18,7 +20,7 @@
             </a>
             </div>
             <div class="menu_toggle">
-                <input type="checkbox" />
+                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -46,6 +48,7 @@
                 <li><a href="./praktiskinfo.html">Praktisk Info</a></li>
                 <li><a href="./medlemsside.html">Medlemsside</a></li>
         </ul>
+        <i class="fa-solid fa-magnifying-glass right"></i>
         </div>
     </header>
         <main>
@@ -57,21 +60,21 @@
 <div class="desktop-max-width">
             <section class="cards">
                 <article>
-                    <div class="fill-image"></div>
+                    <img src="./assets/img/Hjem/Mobile/2017NJStafet.png" alt="3 piger til NJ Stafet" loading="lazy">
                     <h2>O-løb - en sport for alle</h2>
                     <p>Alle kan deltage på deres eget niveau – som barn eller voksen, individuelt eller sammen med
                     andre. Det er slet ikke så svært, som du måske tror!</p>
                     <div class="button"><a href="./nytmedlem.html">Læs om sporten</a></div>
                 </article>
                 <article>
-                 <div class="fill-image"></div>
+                 <img src="./assets/img/Hjem/Mobile/RoldSkovOKFacebook19Juni2023.png" alt="Fællesmiddag om grillen i RSOK" loading="lazy">
                     <h2>Fællesmiddag</h2>
                     <p>Hver tirsdag afsluttes klubbens træning med en fællesmiddag, der samler medlemmerne om et godt måltid og hyggeligt
-                    samvær.</p>
+                    samvær. Husk egen mad.</p>
                     <div class="button"><a href="./aktiviteter.html#middag">Læs mere</a></div>
                 </article>
                 <article>
-                    <div class="fill-image"></div>
+                    <img src="./assets/img/Hjem/Mobile/RoldSkovOKFacebook21Dec2024.png" alt="RSOK Post i naturen" loading="lazy">
                     <h2>Nyheder</h2>
                     <p>Så er alt klar til jer. <br>
                     Posterne er i skoven hele ugen og kortene er klar på hjemmesiden og i kortkassen.
@@ -84,9 +87,9 @@
 
             <section>
                 <article>
-                    <!-- Tilføj knap og lav om til card i css
-                     Fører direkte til sektion om Historien i klubhåndbogen -->
-                    <div class="fill-image"></div>
+                    
+                    <img class="mobile-img" src="./assets/img/Klubhaandbog/Mobile/RoldskovOkNyhedsbrev49Sep2020.png" alt="Sort/Hvid billede af RSOK'kerne i ældre tider" loading="lazy">
+                    <img src="./assets/img/Klubhaandbog/Desktop/RoldskovOkNyhedsbrev49Sep2020.png" alt="Sort/Hvid billede af RSOK'kerne i ældre tider" class="desktop-img" loading="lazy">
                     <h3>Klubbens Historie</h3>
                     <p>Rold Skov Orienteringsklub (RSOK) blev stiftet i vinteren 1942 og vi er stolte af at være en traditionsrig
                     orienteringsklub, der igennem 80 år har sat rammer for fællesskab, motion og kvalitetstid i noget af Danmarks smukkeste
@@ -95,8 +98,8 @@
                     </div>
                 </article>
             </section>
-
             <section>
+                <div class="Twogrid">
                 <article>
                     <h3>For hjerte og hjerne</h3>
                     <p>O-løb er motion for hjerte og hjerne. Fordi man både udfordrer sig selv fysisk men også mentalt, når det gælder om at
@@ -120,8 +123,8 @@
                 etableret et stærkt samarbejde, der sikrer problemfri adgang til skoven. Rold Skov er vores helt særlige kendetegn. Her
                 får du ikke bare godt socialt samvær og god motion, men også en naturoplevelse, der er helt i særklasse.</p>
             </article>
+        </div>
             </section>
-
         <div class="nyhedsbrev">
             <div class="login-box">
                 <h3>Tilmeld dig nyhedsbrevet!</h3>
@@ -138,8 +141,8 @@
             <h4>Sponsorer</h4>
             <!-- Lav sponsor om til links der fører til deres respektive hjemmeside -->
             <div class="spons-wrap">
-            <img src="./assets/img/Sponsor1.jpg" alt="friliv.dk Logo" loading="lazy">
-            <img src="./assets/img/Sponsor2.png" alt="Sparekassen Danmark Logo" loading="lazy">
+            <img src="./assets/img/Hjem/Sponsor1.jpg" alt="friliv.dk Logo" loading="lazy">
+            <img src="./assets/img/Hjem/Sponsor2.png" alt="Sparekassen Danmark Logo" loading="lazy">
             </div>
         </section>
         </div>
@@ -147,20 +150,20 @@
 
         <footer>
             <section class="NyttigLinks">
-                <h6>Nyttige Links</h6>
+                <p>Nyttige Links</p>
                 <a href="https://www.o-service.dk/" target="_blank">O-service.dk</a>
                 <a href="https://www.do-f.dk/" target="_blank">Dansk Orienteringsforbund</a>
                 <a href="https://www.orientering.dk" target="_blank">Information og disskution om O-løb</a>
             </section>
             <section class="NyttigKontakt">
-                <h6>Kontakt</h6>
+                <p>Kontakt</p>
                 <a href="mailto:support@roldskovok.dk">Support@roldskovok.dk</a>
                 <a href="mailto:bestyrelsen@roldskovok.dk">Bestyrelsen@roldskovok.dk</a>
                 <a href="mailto:kortsalg@roldskovok.dk">Kortsalg@roldskovok.dk</a>
             </section>
             <div class="SomeLinks">
-                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="https://www.instagram.com/roldskovorienteringsklub/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/RoldSkovOK/?ref=embed_page">Facebook<i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/roldskovorienteringsklub/">Instagram<i class="fa-brands fa-instagram"></i></a>
             </div>
             <p class="Copyright">Copyright Rold Skov OK &copy; 2025</p>
         </footer>
