Last change hopefully

--- a/Index.html
+++ b/Index.html
@@ -119,7 +119,7 @@
                 <h3>Skoven som legeplads</h3>
                 <p>Rold Skov Orienteringsklub har en unik fordel, som ingen andre klubber kan tilbyde – hele Rold Skov i vores baghave. <br>
                 Denne fantastiske naturperle danner rammen om vores aktiviteter og giver os ubegrænset adgang til et af Danmarks
-                smukkeste og mest varierede skovområder. Hvor det ofte kan være vanskeligt at få lov til at løbe i skove, har vores klub
+                smukkeste og mest varierede skovområder. <br> <br>Hvor det ofte kan være vanskeligt at få lov til at løbe i skove, har vores klub
                 etableret et stærkt samarbejde, der sikrer problemfri adgang til skoven. Rold Skov er vores helt særlige kendetegn. Her
                 får du ikke bare godt socialt samvær og god motion, men også en naturoplevelse, der er helt i særklasse.</p>
             </article>
